# anomaly-detection

./: Install.md  README.md  requirements.txt  setup.cfg  setup.py
anomaly_detection/: context.py  exception.py  log.py  server.py  units.py
anomaly_detection/api/: service.py  services.py  version.py
anomaly_detection/api/middleware/: auth.py
anomaly_detection/api/v1beta/: __init__.py  training.py
anomaly_detection/api/v1beta/view/: training.py
anomaly_detection/api/view/: training.py
anomaly_detection/cmd/: api.py  data_generator.py  data_parser.py  dataparser.py  manage.py
anomaly_detection/common/: options.py
anomaly_detection/data_generator/: client.py  generator.py  jobs.py
anomaly_detection/data_parser/: manager.py
anomaly_detection/db/: __init__.py  api.py  base.py  models.py
anomaly_detection/db/sqlalchemy/: api.py  models.py
anomaly_detection/ml/: algorithm.py  contants.py  manager.py
anomaly_detection/ml/algorithm/: gaussian.py
anomaly_detection/ml/algorithms/: dbscan.py  gaussian.py
anomaly_detection/ml/csv/: __init__.py  performance.csv
anomaly_detection/ml/dataset/: __init__.py  performance-cv.csv  performance-gt.csv  performance-tr.csv
anomaly_detection/utils/: __init__.py  config.py  np_json.py  uuidutils.py
etc/: anomaly_detection.conf
tests/: conftest.py
tests/unit/api/: test_services.py
