[metadata]
name = anomaly_detection
summary = An anomaly detection project for OpenSDS
author = OpenSDS
author-email = opensds-tech-discuss@lists.opensds.io
home-page = https://www.opensds.io/
classifier =
    Environment :: OpenSDS
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    anomaly_detection

[entry_points]
console_scripts =
    anomaly-detection-api = anomaly_detection.cmd.api:main
    anomaly-detection-data-parser = anomaly_detection.cmd.dataparser:main
    anomaly-detection-data-generator = anomaly_detection.cmd.datagenerator:main
